--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
+    "react-quilljs": "^2.0.4",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "y-quill": "^1.0.0",
+    "yjs": "^13.6.18"
   },
   "scripts": {
     "start": "react-scripts start",
